==> yuxueqin1/Fire_lwip_client_OTA/mbport/mbportserial.c <==
#include <stdlib.h>
#include "stm32f4xx_hal.h"
#include "mbport.h"
#include "mbportlayer.h"
#include "mbtypes.h"
#include "mbframe.h"
#include "mbutils.h"
#define MBP_SERIAL_PORTS            ( 7 )
#define IDX_INVALID                 ( 255 )

eMBErrorCode
eMBPSerialInit( xMBPSerialHandle * pxSerialHdl, UCHAR ucPort, ULONG ulBaudRate,
                   UCHAR ucDataBits, eMBSerialParity eParity, UCHAR ucStopBits, xMBHandle xMBHdl )
{
    eMBErrorCode eStatus = MB_EPORTERR;
    xSerialPortInternal *pxSerialPort;
    ULONG wordLength;
    ULONG stopBits;
    ULONG parity;

    if( ( pxSerialHdl == NULL ) || ( xMBHdl == MB_HDL_INVALID ) || ( ucPort >= MBP_SERIAL_PORTS ) ||
        ( ulBaudRate == 0 ) || ( ( ucStopBits != 1 ) && ( ucStopBits != 2 ) ) )
    {
        return MB_EINVAL;
    }

    MBP_ENTER_CRITICAL_SECTION();
    if( !bIsInitialized )
    {
        for( UCHAR ubIdx = 0; ubIdx < MBP_SERIAL_PORTS; ubIdx++ )
        {
            arxSerialPorts[ubIdx].ubIdx = IDX_INVALID;
            arxSerialPorts[ubIdx].pbTXFN = NULL;
            arxSerialPorts[ubIdx].pvRXFN = NULL;
            arxSerialPorts[ubIdx].bTxEnabled = FALSE;
            arxSerialPorts[ubIdx].bRxEnabled = FALSE;
        }

        prvInitPortClocks();
        bIsInitialized = TRUE;
    }

    pxSerialPort = prvGetSerialPort( ucPort );
    if( pxSerialPort != NULL )
    {
        MBP_EXIT_CRITICAL_SECTION();
        return MB_EAGAIN;
    }

    pxSerialPort = &arxSerialPorts[ucPort];
    pxSerialPort->ubIdx = ucPort;
    pxSerialPort->xMBHdl = xMBHdl;
    pxSerialPort->pbTXFN = NULL;
    pxSerialPort->pvRXFN = NULL;
    pxSerialPort->bTxEnabled = FALSE;
    pxSerialPort->bRxEnabled = FALSE;

    pxSerialPort->pxRxPort = arxSerialPortConfig[ucPort].RxPort;
    pxSerialPort->usRxPin = arxSerialPortConfig[ucPort].RxPin;
    pxSerialPort->ucRxAF = arxSerialPortConfig[ucPort].RxAF;
    pxSerialPort->pxTxPort = arxSerialPortConfig[ucPort].TxPort;
    pxSerialPort->usTxPin = arxSerialPortConfig[ucPort].TxPin;
    pxSerialPort->ucTxAF = arxSerialPortConfig[ucPort].TxAF;
    pxSerialPort->pxDePort = arxSerialPortConfig[ucPort].DePort;
    pxSerialPort->usDePin = arxSerialPortConfig[ucPort].DePin;
    pxSerialPort->eIRQn = arxSerialPortConfig[ucPort].IRQn;
    pxSerialPort->huart.Instance = arxSerialPortConfig[ucPort].Instance;

    if( eParity == MB_PAR_NONE )
    {
        wordLength = UART_WORDLENGTH_8B;
        parity = UART_PARITY_NONE;
    }
    else if( eParity == MB_PAR_EVEN )
    {
        wordLength = UART_WORDLENGTH_9B;
        parity = UART_PARITY_EVEN;
    }
    else if( eParity == MB_PAR_ODD )
    {
        wordLength = UART_WORDLENGTH_9B;
        parity = UART_PARITY_ODD;
    }
    else
    {
        MBP_EXIT_CRITICAL_SECTION();
        return MB_EINVAL;
    }

    stopBits = ( ucStopBits == 2 ) ? UART_STOPBITS_2 : UART_STOPBITS_1;

    pxSerialPort->huart.Init.BaudRate = ulBaudRate;
    pxSerialPort->huart.Init.WordLength = ( ULONG )wordLength;
    pxSerialPort->huart.Init.StopBits = stopBits;
    pxSerialPort->huart.Init.Parity = parity;
    pxSerialPort->huart.Init.Mode = UART_MODE_TX_RX;
    pxSerialPort->huart.Init.HwFlowCtl = UART_HWCONTROL_NONE;
    pxSerialPort->huart.Init.OverSampling = UART_OVERSAMPLING_16;
    // pxSerialPort->huart.Init.OneBitSampling = UART_ONE_BIT_SAMPLE_DISABLE;
    // pxSerialPort->huart.AdvancedInit.AdvFeatureInit = UART_ADVFEATURE_NO_INIT;

    prvConfigureUARTPins( pxSerialPort );
    prvInitDirectionPin( pxSerialPort );

    if( HAL_UART_Init( &pxSerialPort->huart ) != HAL_OK )
    {
        pxSerialPort->ubIdx = IDX_INVALID;
        MBP_EXIT_CRITICAL_SECTION();
        return MB_EPORTERR;
    }

    __HAL_UART_DISABLE_IT( &pxSerialPort->huart, UART_IT_RXNE );
    __HAL_UART_DISABLE_IT( &pxSerialPort->huart, UART_IT_TXE );
    __HAL_UART_DISABLE_IT( &pxSerialPort->huart, UART_IT_TC );

    HAL_NVIC_SetPriority( pxSerialPort->eIRQn, 2, 0 );
    HAL_NVIC_EnableIRQ( pxSerialPort->eIRQn );

    *pxSerialHdl = pxSerialPort;
    eStatus = MB_ENOERR;
    MBP_EXIT_CRITICAL_SECTION();
    return eStatus;
}

eMBErrorCode
eMBPSerialClose( xMBPSerialHandle xSerialHdl )
{
    eMBErrorCode eStatus = MB_EINVAL;
    xSerialPortInternal *pxSerialPort = xSerialHdl;

    if( pxSerialPort != NULL )
    {
        if( pxSerialPort->ubIdx != IDX_INVALID )
        {
            __HAL_UART_DISABLE_IT( &pxSerialPort->huart, UART_IT_RXNE );
            __HAL_UART_DISABLE_IT( &pxSerialPort->huart, UART_IT_TXE );
            __HAL_UART_DISABLE_IT( &pxSerialPort->huart, UART_IT_TC );
            HAL_UART_DeInit( &pxSerialPort->huart );
            pxSerialPort->ubIdx = IDX_INVALID;
            pxSerialPort->xMBHdl = MB_HDL_INVALID;
            pxSerialPort->pbTXFN = NULL;
            pxSerialPort->pvRXFN = NULL;
            pxSerialPort->bTxEnabled = FALSE;
            pxSerialPort->bRxEnabled = FALSE;
            eStatus = MB_ENOERR;
        }
    }
    return eStatus;
}

eMBErrorCode
eMBPSerialTxEnable( xMBPSerialHandle xSerialHdl,
                        pbMBPSerialTransmitterEmptyCB pbMBPTransmitterEmptyFN ) //mark:eMBPSerialTxEnable
{
    eMBErrorCode eStatus = MB_EINVAL;
    xSerialPortInternal *pxSerialPort = xSerialHdl;

    MBP_ENTER_CRITICAL_SECTION(  );
    if( pxSerialPort != NULL )
    {
        pxSerialPort->pbTXFN = pbMBPTransmitterEmptyFN;
        if( pbMBPTransmitterEmptyFN != NULL )
        {
            prvSetDE( pxSerialPort, TRUE ); //TX
            __HAL_UART_ENABLE_IT( &pxSerialPort->huart, UART_IT_TXE ); //上电时 TXE 默认为 1（空）,一开 TXE 中断，CPU 立刻进入一次 prvUARTTxISR
            pxSerialPort->bTxEnabled = TRUE;
            
        }
        else
        {
            __HAL_UART_DISABLE_IT( &pxSerialPort->huart, UART_IT_TXE );
            __HAL_UART_DISABLE_IT( &pxSerialPort->huart, UART_IT_TC );
            prvSetDE( pxSerialPort, FALSE ); //RX
            pxSerialPort->bTxEnabled = FALSE;
        }
        eStatus = MB_ENOERR;
    }
    MBP_EXIT_CRITICAL_SECTION()
    return eStatus;
}

eMBErrorCode
eMBPSerialRxEnable( xMBPSerialHandle xSerialHdl, pvMBPSerialReceiverCB pvMBPReceiveFN ) //mark:eMBPSerialRxEnable
{
    eMBErrorCode eStatus = MB_EINVAL;
    xSerialPortInternal *pxSerialPort = xSerialHdl;

    if( pxSerialPort != NULL )
    {
        pxSerialPort->pvRXFN = ( pvMBPSerialReceiverAPIV1CB ) pvMBPReceiveFN;
        if( pvMBPReceiveFN != NULL )
        {
            // prvSetDE( pxSerialPort, FALSE ); //RX, 在TC中断里开比较好，等最后一个字节发送完成后再开RX，避免发送过程中被打断
            __HAL_UART_CLEAR_PEFLAG(&pxSerialPort->huart);
            __HAL_UART_ENABLE_IT( &pxSerialPort->huart, UART_IT_RXNE );
            pxSerialPort->bRxEnabled = TRUE;
            
        }
        else
        {
            __HAL_UART_DISABLE_IT( &pxSerialPort->huart, UART_IT_RXNE );
            pxSerialPort->bRxEnabled = FALSE;
        }
        eStatus = MB_ENOERR;
    }
    return eStatus;
}
